(doc): JDK Mission Control